<?xml version="1.0"?>
<package format="3">
  <name>scan_context_slam</name>
  <version>0.0.1</version>
  <description>Practicing LiDAR SLAM in C++ based on Scan Context BEV global descriptor by building from scratch</description>
  <maintainer email="ji.jeong@uni-bonn.de">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>gtsam</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>